1999-02-10 Alain Magloire

	* PATCHES-AC, PATCHES-AM: updated.

	* m4/regex.m4 : updated.

1999-02-05 Eli Zaretskii

	* m4/gettext.m4 : Support DOS-style D:/foo/bar absolute file
	names.

	* aclocal.m4 (DJGPP) : Use $DJ_GPP instead, since changing the
	latter prevents GCC from finding headers and libraries.

	* djgpp/config.bat: Make building from another directory work

	* djgpp/config.sed: Remove redundant command wich edited path
	separator: now done by configure.

	* src/grep.c [O_BINARY]: Add prototype for undossify_input.

	* doc/grep.texi (Introduction): Typo fixed.

1999-02-03 Alain Magloire

	* grep-2.2f beta release.

1999-02-02 Alain Magloire

	* m4/{djgpp,envsep,glibc,regex,dosfile,isc-posix}.m4 :
	New files to aid configuration and unload configure.in.
	* m4/Makefile.am : updated.
	* src/btowc.c : protect for wchar.h

1999-01-28 Alain Magloire

	* intl/Makefile.in: Replace .o with .${ac_objext} where necessary.
	Work around a limitation of Visual C++ on Cygwin32.
	* acconfig.h configure.in: Define `alloca' as `_alloca' when CC=cl.
	This little hack was suggested by Ian Roxborough <irox@cygnus.com>.
	Patch forwarded by Ben Elliston.

1999-01-28 Alain Magloire

	* PATCHES-AM: New file. A small patch for automake-1.4, use $(sep)
	as the path separator base on @SEP@.
	* PATCHES-AC configure.in : updated for autoconf-13.
 
1999-01-27 Volker Borchert

	* grep.c: fgrep -NUM not working correctly.
	add the argument number to digit_args_val.

1999-01-22 Paul Eggert

	Prevent grep -r from recursing infinitely through directory loops via
	symbolic links.

	* grep.c (struct stats): New type.
	(stats_base): New var.
	(bufstat): Remove; subsumed by stats->stat.
	(reset, fillbuf, grep, grepdir, grepfile): Pass struct stats * arg,
	for directory loop checking; use this instead of the bufstat global.
	All callers changed.
	(grepfile): Stat the file before invoking grepdir.
	(grepdir): Assume that the argument has already been statted.