@@ -1,0 +1,4 @@
+## Process this file with automake to create Makefile.in
+AUTOMAKE_OPTIONS = no-dependencies
+
+EXTRA_DIST = Makefile.try README
