@@ -1,0 +1,11 @@
+#
+
+IF your system is lacking the necessary tools to build the configuration,
+Makefile.try is provided for bootstraping. Copy all the source and header
+files from grep-$version/src directory, move Makefile.try to Makefile,
+edit the Makefile and type make. Good luck !
+
+cp ../src/*.c .
+cp ../src/*.h .
+cp Makefile.try Makefile
+make
