@@ -1,4 +1,6 @@
-#include <config.h>
+#ifdef HAVE_CONFIG_H
+# include <config.h>
+#endif
 #include "system.h"
 #include "grep.h"
 char const default_matcher[] = "egrep";
